# DDCAL

./: .gitignore  LICENSE  README.md  setup.cfg
src/clustering/: ddcal.py
src/ddcal.egg-info/: PKG-INFO  SOURCES.txt
src/ddcal_forthereview1.egg-info/: PKG-INFO  SOURCES.txt
src/ddcalforthereview1.egg-info/: PKG-INFO  SOURCES.txt
supplemental/Real World Data Set 1 - Process Mininig/: process_model_frequencies.csv
supplemental/Results Real World Data Sets/: dbscan_exponential.txt  dbscan_gumbel.txt  dbscan_normal.txt  dbscan_two_peaks.txt  dbscan_uniform.txt  ddcal_exponential.txt  ddcal_gumbel.txt  ddcal_normal.txt  ddcal_two_peaks.txt  ddcal_uniform.txt  jenks_natural_breaks_exponential.txt  jenks_natural_breaks_gumbel.txt  jenks_natural_breaks_normal.txt  jenks_natural_breaks_two_peaks.txt  jenks_natural_breaks_uniform.txt  k-medoids_exponential.txt  k-medoids_gumbel.txt  k-medoids_normal.txt  k-medoids_two_peaks.txt  k-medoids_uniform.txt  kde_exponential.txt  kde_gumbel.txt  kde_normal.txt  kde_two_peaks.txt  kde_uniform.txt  kernel_k_means_exponential.txt  kernel_k_means_gumbel.txt  kernel_k_means_normal.txt  kernel_k_means_two_peaks.txt  kernel_k_means_uniform.txt  kmeans_pp_exponential.txt  kmeans_pp_gumbel.txt  kmeans_pp_normal.txt  kmeans_pp_two_peaks.txt  kmeans_pp_uniform.txt  largest_gaps_exponential.txt  largest_gaps_gumbel.txt  largest_gaps_normal.txt  largest_gaps_two_peaks.txt  largest_gaps_uniform.txt  (+17 more)
supplemental/Results Synthetic Data Sets/: Data Set 1 Process Mining.txt  Data Set 2 US Population.txt  (+61 more)
tests/: analyze.py  test_ddcal.py
(+58 files in other folders)
