[metadata]
name = ddcal-forthereview1
version = 1.0.3
author = For The Review
author_email = forreview1@mailfence.com
description = clustering packages with ddcal algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/forthereview/forthereview1
project_urls =
    Bug Tracker = https://github.com/forthereview/forthereview1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
