[metadata]
name = ddcal
version = 1.0.0
author = Marian Lux
author_email = mlux.ddcal@swisdata.com
description = clustering packages with DDCAL algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luxmar/DDCAL
project_urls =
    Bug Tracker = https://github.com/luxmar/DDCAL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
